bytt till mariadb på rock pi för db hosting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.datasource.url=${SPRING_URL}
 spring.datasource.username=${SPRING_USER}
 spring.datasource.password=${SPRING_PASS}
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#denna nyttjas om kör mamp lokalt istället för att nyttja rock pi 4 se
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -11,8 +14,6 @@ spring.output.ansi.enabled=ALWAYS
 
 logging.exception-conversion-word=%wEx
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
-
-
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
